--- a/style.css
+++ b/style.css
@@ -138,10 +138,11 @@ footer {
 /* sluzby */
 .services {
     max-width: 1200px;
-    margin: 20px;
+    margin-left: 150px;
+    margin-right: 150px;
     padding: 20px;
     text-align: center;
-    margin-bottom: 170px;
+    margin-top: 100px;
 }
 
 .h2 {
@@ -156,9 +157,9 @@ footer {
     flex-wrap: wrap;
     gap: 20px;
     justify-content: center;
-    margin-left: 150px;
-    margin-right: 150px;
-    margin-bottom: 100px;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-bottom: 0px;
 }
 
 .service-item {
